# learncaml

./: .gitignore  README.md  dune-project  learncaml.opam  new-challenge.sh  reset-stubs.sh  reset_stubs.sh
challenges/0001-sum-of-two-numbers/: solution.ml  test.ml
challenges/0002-minutes-into-seconds/: solution.ml  test.ml
challenges/0003-area-of-a-triangle/: dune  solution.ml  test.ml
challenges/0003-next-number/: solution.ml  test.ml
challenges/0004-area-of-triangle/: solution.ml  test.ml
challenges/0004-remainder-of-two-numbers/: solution.ml  test.ml
challenges/0005-how-much-is-true/: solution.ml  test.ml
challenges/0005-remainder-of-two-numbers/: solution.ml  test.ml
challenges/0006-how-much-is-true/: solution.ml  test.ml
challenges/0006-longest-common-prefix/: solution.ml  test.ml
challenges/0007-alpha-range/: solution.ml  test.ml
challenges/0007-longest-common-prefix/: solution.ml  test.ml
challenges/0008-alpha-range/: solution.ml  test.ml
challenges/0008-tower-of-hanoi/: solution.ml  test.ml
